--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Portfolio | Your Name</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Portfolio | Meg Gallagher</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
@@ -11,7 +12,7 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
+      <a href="index.html" id="logo">Meg Gallagehr</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
@@ -25,29 +26,29 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+        <img src="assets/images/creative.jpg" alt="Social">
         
-        <h3>Word Guess</h3>
+        <h3>Social</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+        <img src="assets/images/data.jpg" alt="projects">
 
-        <h3>RPG Game</h3>
+        <h3>Projects</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+        <img src="assets/images/travel.jpg" alt="Travel">
 
-        <h3>Trivia Game</h3>
+        <h3>Travel</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+        <img src="assets/images/teach.jpg" alt="References">
 
-        <h3>Rutgers Info Widget</h3>
+        <h3>References</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+        <img src="assets/images/recipe.jpeg" alt="Recipes">
 
-        <h3>Rock Paper Scissors</h3>
+        <h3>Recipes</h3>
       </div>
 
     </section>
