--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Meg Gallagehr</a>
+      <a href="index.html" id="logo">Meg Gallagher</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
