--- a/index.html
+++ b/index.html
@@ -25,13 +25,19 @@
     <section class="main-section">
       <h1>About Me</h1>
 
-      <img src="./assets/images/17973758_10211774238501697_845662861226526202_o.jpg" class="auth-image" alt="Meg Gallagher">
+            <img src="./assets/images/17973758_10211774238501697_845662861226526202_o.jpg" class="auth-image" alt="Meg Gallagher">
+         
 
-      <p>Welcome to my page! My name is Megan, and I am a former science teacher looking forward to changing careers into technology. I have been learning how to code on my own for the last 4 months, and am so excited to be a member of the newest cohort at UT's Coding Bootcamp!</p>
+      <p>Welcome to my page! My name is Megan, and I am a former science teacher looking forward to changing careers into technology.
+        I have been learning how to code on my own for the last 4 months, and am so excited to be a member of the newest
+        cohort at UT's Coding Bootcamp!</p>
 
-      <p>Besides my newfound interest in coding, I am a food fanatic - baking and cooking are some of my favorite things to do. I am also a gardener, with raised-bed vegetable gardens along with a few flower beds. I love camping and hiking, and especially love visiting national parks.</p>
+      <p>Besides my newfound interest in coding, I am a food fanatic - baking and cooking are some of my favorite things to
+        do. I am also a gardener, with raised-bed vegetable gardens along with a few flower beds. I love camping and hiking,
+        and especially love visiting national parks.</p>
 
-      <p>If you'd like to know more or are intersted in getting in touch with me, click on the "Contact Me" button to send me a message.</p>
+      <p>If you'd like to know more or are intersted in getting in touch with me, click on the "Contact Me" button to send me
+        a message.</p>
 
     </section>
 
@@ -39,7 +45,7 @@
 
   <footer>
     <div class="container">
-      Copyright &copy; 
+      Copyright &copy;
     </div>
   </footer>
 </body>
